--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,4 +1,4 @@
-name: Main
+name: Push
 on: [push]
 jobs:
   checkstyle:
@@ -32,9 +32,20 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
+      - name: Validate Gradle plugin
+        run: ./gradlew validatePlugins
       - name: Run tests
         run: ./gradlew test
       - name: Generate coverage report
         run: ./gradlew jacocoTestReport
-      - name: Validate Gradle plugin
-        run: ./gradlew validatePlugins
+      - name: Run SonarCloud scanner
+        uses: sonarsource/sonarcloud-github-action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v1
+      - name: Upload coverage report to Codacy
+        uses: codacy/codacy-coverage-reporter-action@master
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
