--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,11 +38,8 @@ jobs:
         run: ./gradlew test
       - name: Generate coverage report
         run: ./gradlew jacocoTestReport
-      - name: Run SonarCloud scanner
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Run SonarQube scanner
+        run: ./gradlew sonarqube
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v1
       - name: Upload coverage report to Codacy
