--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,9 @@ jobs:
         run: ./gradlew jacocoTestReport
       - name: Run SonarQube scanner
         run: ./gradlew sonarqube
+        env:
+          GITHUB_TOKEN: ${{  secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v1
       - name: Upload coverage report to Codacy
