--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,7 +12,5 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      - name: Configure Gradle properties
-        run: echo -e "gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }}\ngradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}" > ~/.gradle/gradle.properties
       - name: Publish Gradle plugin
-        run: ./gradlew publishPlugins
+        run: ./gradlew -Dgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Dgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} publishPlugins
