--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@ plugins {
     id 'java-gradle-plugin'
     id 'com.gradle.plugin-publish'     version '0.12.0'
     id 'checkstyle'
-    id 'com.github.spotbugs'           version '4.4.1'
+    id 'com.github.spotbugs'           version '4.4.4'
     id 'org.sonarqube'                 version '3.0'
     id 'jacoco'
-    id 'com.github.ben-manes.versions' version '0.28.0'
+    id 'com.github.ben-manes.versions' version '0.29.0'
 }
 
 group   'com.github.ayltai'
-version '1.0.4'
+version '1.0.5'
 
 sourceCompatibility = 8
 targetCompatibility = 8
@@ -26,7 +26,7 @@ ext {
 }
 
 dependencies {
-    testImplementation 'org.mockito:mockito-core:3.3.12'
+    testImplementation 'org.mockito:mockito-core:3.4.5'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
@@ -38,7 +38,7 @@ test {
 //region Checkstyle configurations
 
 checkstyle {
-    toolVersion    = '8.33'
+    toolVersion    = '8.34'
     configFile     = rootProject.file('./checkstyle.xml')
     ignoreFailures = true
     showViolations = true
@@ -71,7 +71,7 @@ spotbugs {
     reportLevel = 'medium'
 }
 
-tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
+spotbugsMain {
     reports {
         xml.enabled  = false
         html.enabled = true
