--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ plugins {
 }
 
 group   'com.github.ayltai'
-version '1.1.0'
+version '1.1.1'
 
-sourceCompatibility = 8
-targetCompatibility = 8
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     jcenter()
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.11'
 
     // Testing
-    testImplementation 'org.mockito:mockito-core:3.4.8'
+    testImplementation 'org.mockito:mockito-core:3.5.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
@@ -43,7 +43,7 @@ test {
 //region Checkstyle configurations
 
 checkstyle {
-    toolVersion    = '8.34'
+    toolVersion    = '8.35'
     configFile     = rootProject.file('./checkstyle.xml')
     ignoreFailures = true
     showViolations = true
